--- a/OS_Lab3/OS03_04/OS03_04.vcxproj
+++ b/OS_Lab3/OS03_04/OS03_04.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="OS03_04.cpp" />
+    <ClCompile Include="OS03_04.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
