--- a/OS_Lab3/OS03_04/OS03_04.vcxproj.filters
+++ b/OS_Lab3/OS03_04/OS03_04.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="OS03_04.cpp">
+    <ClCompile Include="OS03_04.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
